--- a/templates/mongod.conf.j2
+++ b/templates/mongod.conf.j2
@@ -7,6 +7,7 @@ storage:
 systemLog:
   destination: file
   logAppend: true
+  logRotate: reopen
   path: {{ mongodb_log_dir }}/mongod.log
 net:
   port: {{ mongodb_port }}
